Bug 590353 - Do not try to reset the default value if the element value isn't different from the value attribute. r=smaug a2.0=blocking